added new feature

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<section class="main__container__content">
 				<div class="main__container__content-input">
 					<span class="main__container__content-required">*</span>
-					<input id="name" class="usuallyState" type="text" placeholder="Введите имя" required />
+					<input id="name" class="usuallyState" type="text" placeholder="Введите имя" required minlength="2" maxlength="25"/>
 				</div>
 				<div class="main__container__content-input">
 					<span class="main__container__content-required">*</span>
-					<input id="surname" type="text" placeholder="Введите фамилию" required />
+					<input id="surname" class="usuallyState" type="text" placeholder="Введите фамилию" required minlength="2" maxlength="25" />
 				</div>
 				<div class="main__container__content-input">
 					<span class="main__container__content-required">*</span>
