added new feature

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 					<input
 						id="birthday"
 						type="text"
-						placeholder="Введите дату рождения" required
+                  class="usuallyState"
+						placeholder="Введите дату рождения в формате ДД.ММ.ГГ" required
 					/>
 				</div>
 				<div class="main__container__content-input">
