added new feature

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						id="email"
 						type="text"
 						placeholder="Введите электронную почту" required
+						class="usuallyState"
 					/>
 				</div>
 				<div class="main__container__content-input">
