fix/1003: changes title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<main class="main__container">
-			<h2 class="main__container_title">Validate Form</h2>
+			<h2 class="main__container_title">Registration Form</h2>
 			<section class="main__container__content">
 				<form
 					class="main__container__content-form"
@@ -86,7 +86,6 @@
 							placeholder="Подтвердите пароль"
 							required
 							class="usuallyState"
-							
 						/>
 					</div>
 					<button class="submit">Отправить</button>
