feature/TMS-1003: added new feature for password

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<span class="main__container__content-required">*</span>
 						<input
 							id="password"
-							type="text"
+							type="password"
 							placeholder="Введите пароль"
 							required
 							minlength="8"
@@ -82,7 +82,7 @@
 						<span class="main__container__content-required">*</span>
 						<input
 							id="doublepassword"
-							type="text"
+							type="password"
 							placeholder="Подтвердите пароль"
 							required
 							class="usuallyState"
